spacing issue

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -904,3 +904,9 @@ $radii: 3, 5, 8, 10, 15, 20, 25
     width: 36px !important
     background: $color-gray-23 !important
     border-radius: 5px !important
+
+.wishlist-popover.popover.b-popover
+  height: 45px
+  display: flex 
+  align-items: center
+  border: 0
